--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,6 @@
 --- 
+ajaxloader.gif: ajaxloader-fbb38dfc06887042ca54f154b00c9990.gif
+ajaxloader/index.gif: ajaxloader-fbb38dfc06887042ca54f154b00c9990.gif
 images.jpeg: images-ce427b616bbcadec3c8ee75f0d8f84f9.jpeg
 images/index.jpeg: images-ce427b616bbcadec3c8ee75f0d8f84f9.jpeg
 logo.gif: logo-8b7a2c24866e55c7cc6431947bf6c323.gif
@@ -11,15 +13,19 @@ pdf.jpeg: pdf-b098ab0903e24391a8b86eddbdb02e21.jpeg
 pdf/index.jpeg: pdf-b098ab0903e24391a8b86eddbdb02e21.jpeg
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-695d3817772a72066a55b746feb308e0.js
-application/index.js: application-695d3817772a72066a55b746feb308e0.js
-application.css: application-88e8070ece78dbec84f6eaadc9946ef5.css
-application/index.css: application-88e8070ece78dbec84f6eaadc9946ef5.css
-members.css: members-cc2438e9af59aeab1f38598b482007dd.css
-members/index.css: members-cc2438e9af59aeab1f38598b482007dd.css
-glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
-glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
-jquery.min.map: jquery.min-1c0cf7b6a3425fbd9a3bfccab0a99a4e.map
-jquery/index.min.map: jquery.min-1c0cf7b6a3425fbd9a3bfccab0a99a4e.map
+application.js: application-c5a1f77077324e18396ff60bb5e83278.js
+application/index.js: application-c5a1f77077324e18396ff60bb5e83278.js
+application.css: application-7fae3ef8e161aa624331cffed57ec9cd.css
+application/index.css: application-7fae3ef8e161aa624331cffed57ec9cd.css
+members.css: members-72ff659bba2b0b368e3654dd349272c5.css
+members/index.css: members-72ff659bba2b0b368e3654dd349272c5.css
+bootstrap/glyphicons-halflings-regular.eot: bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
+bootstrap/glyphicons-halflings-regular/index.eot: bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
+bootstrap/glyphicons-halflings-regular.svg: bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
+bootstrap/glyphicons-halflings-regular/index.svg: bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
+bootstrap/glyphicons-halflings-regular.ttf: bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
+bootstrap/glyphicons-halflings-regular/index.ttf: bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
+bootstrap/glyphicons-halflings-regular.woff: bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
+bootstrap/glyphicons-halflings-regular/index.woff: bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
+jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
+jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
