--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -13,19 +13,15 @@ pdf.jpeg: pdf-b098ab0903e24391a8b86eddbdb02e21.jpeg
 pdf/index.jpeg: pdf-b098ab0903e24391a8b86eddbdb02e21.jpeg
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-c5a1f77077324e18396ff60bb5e83278.js
-application/index.js: application-c5a1f77077324e18396ff60bb5e83278.js
-application.css: application-7fae3ef8e161aa624331cffed57ec9cd.css
-application/index.css: application-7fae3ef8e161aa624331cffed57ec9cd.css
-members.css: members-72ff659bba2b0b368e3654dd349272c5.css
-members/index.css: members-72ff659bba2b0b368e3654dd349272c5.css
-bootstrap/glyphicons-halflings-regular.eot: bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
-bootstrap/glyphicons-halflings-regular/index.eot: bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
-bootstrap/glyphicons-halflings-regular.svg: bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
-bootstrap/glyphicons-halflings-regular/index.svg: bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
-bootstrap/glyphicons-halflings-regular.ttf: bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
-bootstrap/glyphicons-halflings-regular/index.ttf: bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
-bootstrap/glyphicons-halflings-regular.woff: bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
-bootstrap/glyphicons-halflings-regular/index.woff: bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
+application.js: application-0a0f6a1189ebcd3949ed7bd1ac284ee2.js
+application/index.js: application-0a0f6a1189ebcd3949ed7bd1ac284ee2.js
+application.css: application-43d1823fb4a3a4b689902054e6954673.css
+application/index.css: application-43d1823fb4a3a4b689902054e6954673.css
+members.css: members-994094fb2e240eb9c388771fba6af125.css
+members/index.css: members-994094fb2e240eb9c388771fba6af125.css
+glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
